--- a/style.css
+++ b/style.css
@@ -171,7 +171,17 @@ table tr .table-row-strong {
 }
 .slider-container {
     /*background-color: yellow;*/
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
     position: relative;
+}
+.slider-item {
+    white-space: normal;
+    width: 100%;
+    display: inline-block;
+    vertical-align: top;
+    transition: transform .25s ease-in-out;
 }
 .slider-left-arrow-container {
     left: 30px;
@@ -179,35 +189,61 @@ table tr .table-row-strong {
 .slider-right-arrow-container {
     right: 30px;
 }
+.slider-control {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+    text-align: justify;
+    pointer-events: none;
+}
+.slider-control::after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 0;
+}
 .slider-arrow {
     position: absolute;
     top: 40%;
     cursor: pointer;
+    pointer-events: all;
+}
+.slider-arrow.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+.slider-page {
+    pointer-events: all;
+}
+.slider-page {
+    background-color: #b1926e;
+    border-radius: 50%;
+    margin: 2px;
+    height: 15px;
+    width: 15px;
+    border: 2px solid #b1926e;
+}
+.slider-page:hover {
+    background: #ccc;
+    cursor pointer;
+}
+.slider-page.active {
+    background-color: #f2ebe1;
 }
 .slider-main-image {
     width: 100%;
     height: 100%;
     vertical-align: top;
 }
-.right-arrow {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    background-color: #b1926e;
-    border-radius: 50%;
-    border: 2px solid #b1926e;
-}
-.right-arrow:hover {
-    background-color: #ccc;
-    cursor: pointer;
-}
 .picture-slider {
     /*background-color:red;*/
     width: 53px;
     text-align: center;
     position: absolute;
-    margin-top: -40px;
-    margin-left: 50%;
+    left: 50%;
+    bottom: 20px;
 }
 .slider-title1 {
     margin-top: -115px;
@@ -439,13 +475,16 @@ table tr .table-row-strong {
     background-color: #7f6c42;
     border: none;
 }
-.contact-form-button {
+.submit {
     background-color: #b1965c;
     border: none;
     color:#f9e09e;
     font-size:12px;
     width:60px;
     height:25px;
+}
+.oshibka {
+    border: 1px solid red;
 }
 .connection {
     font-size: 18px;
@@ -490,4 +529,30 @@ table tr .table-row-strong {
 }
 .align-center{
 text-align:center;
+}
+.item {
+    display: inline-block;
+    text-align: center;
+}
+.item img {
+    display: block;
+}
+.home-button {
+    background: rgba(44, 44, 44, 0.3);
+    position: fixed;
+    z-index: 1000;
+    transform: rotate(90deg);
+    right: 20px;
+    bottom: 10%;
+    width: 60px;
+    text-align: center;;
+}
+.bullet-on-top {
+    margin-top: 3px;
+}
+.errors {
+    background: #fff;
+    width: 260px;
+    color: red;
+    border-radius: 4px;
 }
